--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -11,9 +11,9 @@ High volatility of cryptocurrencies like Ether or Bitcoin is the reason behind t
 
 \begin{figure}[ht]
 	\centering
-	\subfloat[Graph1]{\includegraphics[width=0.5\textwidth]{graph1.pdf}\label{fig:graph1}}
+	\subfloat[Graph1]{\includegraphics[width=0.5\textwidth]{figures/graph1.pdf}\label{fig:graph1}}
 	\hfill
-	\subfloat[Graph2]{\includegraphics[width=0.5\textwidth]{graph2.pdf}\label{fig:graph2}}
+	\subfloat[Graph2]{\includegraphics[width=0.5\textwidth]{figures/graph2.pdf}\label{fig:graph2}}
 	\caption{Comparison}
 	\label{fig:Comparison}
 \end{figure}
@@ -216,13 +216,13 @@ broader world beyond the digital assets ecosystem really need (or want) stableco
 \section{Discussion about the Gas Value in Ethereum}
 \begin{figure}[ht]
 	\centering
-	\subfloat[EUR]{\includegraphics[width=0.5\textwidth]{eur.pdf}\label{fig:eur}}
+	\subfloat[EUR]{\includegraphics[width=0.5\textwidth]{figures/eur.pdf}\label{fig:eur}}
 	\hfill
-	\subfloat[GAS]{\includegraphics[width=0.5\textwidth]{gas.pdf}\label{fig:gas}}
+	\subfloat[GAS]{\includegraphics[width=0.5\textwidth]{figures/gas.pdf}\label{fig:gas}}
 		\hfill
-	\subfloat[ETH]{\includegraphics[width=0.5\textwidth]{eth.pdf}\label{fig:eth}}
+	\subfloat[ETH]{\includegraphics[width=0.5\textwidth]{figures/eth.pdf}\label{fig:eth}}
 		\hfill
-	\subfloat[Gold]{\includegraphics[width=0.5\textwidth]{gold.pdf}\label{fig:gold}}
+	\subfloat[Gold]{\includegraphics[width=0.5\textwidth]{figures/gold.pdf}\label{fig:gold}}
 	\caption{Comparison}
 	\label{fig:aboutgas}
 \end{figure}
