Typos corrected in section 3

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -87,16 +87,16 @@ Another approach is the seigniorage shares method\cite{overview}. Here, the smar
 
 
 \section{Problems that stable coin addresses}
-As mentioned in the ..., currencies can serve as a store of value, a unit of account, and a medium of exchange~\cite{smithin2002money}. In order to serves as a unit of account and store of value, currencies have to denote a minimum level of value stability. In this regard, stable coins are proposed to provide store of value and unit of account functionalities, due to their non-fluctuating value in terms of fiat currencies or any other alternative. In addition, they purport to solve a group of critical issues that were introduced when using cryptocurrencies introduce. In this section, we discuss these issues.
+As mentioned in the ..., currencies can serve as a store of value, a unit of account, and a medium of exchange~\cite{smithin2002money}. In order to serve as a unit of account and store of value, currencies have to denote a minimum level of value stability. In this regard, stable coins are proposed to provide store of value and unit of account functionalities, due to their non-fluctuating value in terms of fiat currencies or any other alternative. In addition, they purport to solve a group of critical issues that were introduced when using cryptocurrencies. In this section, we discuss these issues.
 
 
 \subsection{Cryptocurrencies as Medium of Exchange}
-Despite the fast growing of the cryptocurrencies and decentral applications, there is still little deployment of these digital assets in the daily payment procedures of the companies and businesses. The main reason is that these assets are volatile in the price and hence highly risky to be deployed by merchants and retailers, \ie it is impossible for a company employers to provide the employees incomes in a volatile cryptocurrency \eg BTC with which there is a high level of future value and price uncertainty. On the other hand, having an stable price over the time, stable coins can serve as a true medium of exchange while they preserve all the advantages of using cryptocurrencies as opposed to fiat currencies.
+Despite the fast growth of the cryptocurrencies and decentral applications, there is still little deployment of these digital assets in the daily payment procedures of the companies and businesses. The main reason is that these assets are volatile in the price and hence highly risky to be deployed by merchants and retailers, \ie it is impossible for a company employer to provide the employees' incomes in a volatile cryptocurrency \eg BTC with which there is a high level of future value and price uncertainty. On the other hand, having a stable price over the time, stable coins can serve as a true medium of exchange, while they preserve all the advantages of using cryptocurrencies as opposed to fiat currencies.
 \subsection{Cryptocurrencies as Unit of Account}
-One of the most necessary functions of money is to serve as a unit of account-- the common measure that sets price to goods and services. Fiat currencies, \eg US dollar, Pound \etc serve this functionality correctly so they are used as units of accounts in the US and Europe respectively. Unfortunately, cryptocurrencies such as BTC, which do not have a stable price and value, do not seem to be used as a unit of account hence will not be able to serve as \textit{money} and replace the fiat currencies. However, given the price stability that stable coins offer, they have higher chance to be used as a digital representation of a unit of account and hence replace fiat.
+One of the most necessary functions of money is to serve as a unit of account-- the common measure that sets price to goods and services. Fiat currencies, \eg US dollar, Pound \etc serve this functionality correctly so they are used as units of account in the US and Europe respectively. Unfortunately, cryptocurrencies such as BTC, which do not have a stable price and value, do not seem to be used as a unit of account, hence will not be able to serve as \textit{money} and replace the fiat currencies. However, given the price stability that stable coins offer, they have a higher chance to be used as a digital representation of a unit of account and hence replace fiat.
 
 \subsection{Cryptocurrencies as Store of Value}
-Any asset, commodity, or money that maintains its value is called a store of value. As mentioned in Section~\ref{Intro}, high volatile crypto-currencies (\ie Bitcoin) cannot fulfill this property of money as they cannot maintain their purchasing value for long-term. In contrast, stable coins can be accepted as a store of value as their price remains stable over the time.
+Any asset, commodity, or money that maintains its value is called a store of value. As mentioned in Section~\ref{Intro}, highly volatile crypto-currencies (\ie Bitcoin) cannot fulfill this property of money, as they cannot maintain their purchasing value for long-term. In contrast, stable coins can be accepted as a store of value as their price remains stable over the time.
 
 %\subsection{dApps}
 %from the blockchain paper:
@@ -110,7 +110,7 @@ Any asset, commodity, or money that maintains its value is called a store of val
 %Finally, ERC20 stablecoins can be held and transferred by anyone who already has an Ethereum wallet, and nearly half of all stablecoin projects (48\%) are running on Ethereum. Provided that Ethereum is a successful underlying infrastructure protocol for dApps, ERC20 stablecoins should be adopted faster and benefit from the Ethereum vibrant ecosystem.
 
 \subsection{Lending with Cryptocurrencies}
-Despite quite a few blockchain applications in financial technologies, there has been little deployment of lending. One of the main challenges with the lending that makes it difficult to be deployed on the blockchains is the monetary instability observed in the the existing cryptocurrencies~\cite{okoyetoward}. This volatility has led the existing cryptocurrencies to be used more as speculative investments instead of serving as store of value and unit of account. In a lending situation with volatile currencies, where their value is being depreciated or appreciated over time, the cash taker will eventually owe more than what he has borrowed or the vice versa. Therefore, the volatility in the value of cryptocurrencies cause serious concerns and difficulties both for cash takers and cash providers~\cite{okoyetoward}. In the contrast, lending perfectly works if a loan is done with a stable cryptocurrency, whose value remains stable over the time.
+Despite quite a few blockchain applications in financial technologies, there has been little deployment of lending. One of the main challenges with the lending that makes it difficult to be deployed on the blockchains is the monetary instability observed in the existing cryptocurrencies~\cite{okoyetoward}. This volatility has led the existing cryptocurrencies to be used more as speculative investments instead of serving as store of value and unit of account. In a lending situation with volatile currencies, where their value is being depreciated or appreciated over time, the cash taker will eventually owe more than what he has borrowed or the vice versa. Therefore, the volatility in the value of cryptocurrencies cause serious concerns and difficulties both for cash takers and cash providers~\cite{okoyetoward}. In the contrast, lending perfectly works if a loan is done with a stable cryptocurrency, whose value remains stable over the time.
 
 %\subsection{Government Surveillance}
 %
@@ -118,7 +118,7 @@ Despite quite a few blockchain applications in financial technologies, there has
 
 \subsection{Remittance}
 
-Although cryptocurrencies, specially Bitcoin, play a revolutionary role in financial system, they are yet not easy to transact with due to their volatility characteristics. Therefore, having a stable coin one can benefit from the decentralized nature of the token while there is no price volatility risk as the transaction or the payment is processed cross boarders specially when it comes to remittances.
+Although cryptocurrencies, specially Bitcoin, play a revolutionary role in financial system, they are yet not easy to transact due to their volatile characteristics. Therefore, having a stable coin one can benefit from the decentralized nature of the token, while there is no price volatility risk as the transaction or the payment is processed cross boarders specially when it comes to remittances. ~\textblue{what is remittance, a definition?}
 
 
 % nation issued digital assets can be
